# a1facts

./: .env-example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  a1c.py  company_ontology.owl  company_ontology.py  financial_ontology.ttl  fortu.py  funding_ontology.py  graph.py  hello.py  hello2.py  infoagent-funding.py  infoagent.py  knowledge_source.py  pyproject.toml  t2.py  test.py
lib/: README.md  pyproject.toml  pytest.ini  requirements.txt
lib/scripts/: pypy.bat
lib/src/: __init__.py  a1facts.py
lib/src/a1facts/: knowledge_base.py
lib/src/enrichment/: knowledge_acquirer.py
lib/src/graph/: graph_database.py  knowledge_graph.py  neo4j_graph_database.py  networkx_graph_database.py  query_agent.py  query_rewrite_agent.py  update_agent.py
lib/src/ontology/: entity_class.py  knowledge_ontology.py  ontology_rewrite_agent.py  relationship_class.py
lib/src/utils/: logger.py  telemetry.py
lib/tests/: conftest.py  testplan.md
lib/tests/e2e/: company.yaml  conftest.py  infoagent.py  print_graph.py  sources.yaml  test.py  test_entity_uniqueness.py  test_knowledge_base.py  test_rewrite_logic.py
lib/tests/enrichment/: test_knowledge_acquirer.py
lib/tests/graph/: docker-compose.yml  test_knowledge_graph.py  test_neo4j_graph_database.py  test_networkx_graph_database.py
lib/tests/integration/: test_acquirer_graph_integration.py  test_ontology_acquirer_integration.py
lib/tests/ontology/: Makefile  PERFORMANCE_TESTING_SUMMARY.md  README_performance.md  example_performance_usage.py  requirements_performance.txt  run_performance_tests.py  simple_performance_test.py  test_entity_class.py  test_knowledge_ontology.py  test_knowledge_ontology_validation.py  test_ontology_performance.py  test_ontology_rewrite_agent.py  (+2 more)
(+80 files in other folders)
