[project]
name = "a1facts"
version = "0.2.1"
license = {file = "LICENSE"}
authors = [
  {name = "Shadi Copty", email = "shadi@a1facts.ai"}
]
description = "a1facts - precise knowledge for AI agents"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "agno>=1.8.0",
    "colored>=2.3.1",
    "exa-py>=1.15.3",
    "mcp>=1.13.1",
    "neo4j>=5.28.2",
    "nest-asyncio>=1.6.0",
    "networkx>=3.5",
    "posthog>=6.7.1",
    "pytest>=8.4.2",
    "yfinance>=0.2.65",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.2",
]

[tool.setuptools]
include-package-data = true # This can stay
py-modules = ["a1facts"]

[tool.setuptools.packages.find]
where = ["src"]

[project.urls]
Homepage = "https://github.com/shadi-fsai/a1facts"
Issues = "https://github.com/shadi-fsai/a1facts/issues"

[tool.pytest.ini_options]
pythonpath = [
  "src"
]
